Spectacle WinterFantasy - fixed design bugs on mobile

--- a/wp-content/themes/wp-spectacle-winterfantasy/static/styles/src/header.less
+++ b/wp-content/themes/wp-spectacle-winterfantasy/static/styles/src/header.less
@@ -34,6 +34,19 @@ header{
 
   }*/
 
+  .main-artists{
+    width: 95%;
+    height: auto;
+    display: block;
+    margin: 80px auto 0 auto;
+  }
+
+  @media @phone-landscape {
+    .main-artists{
+      width: 460px;
+    }
+  }
+
   .artist-logos{
     margin-bottom: 40px;
   }
@@ -42,7 +55,7 @@ header{
     margin: 35px 0 15px 0;
 
     & > img{
-      max-width: 187px;
+      max-width: 100px;
     }
 
     @media @tablet {
@@ -57,7 +70,7 @@ header{
     margin: 0 40px;
 
     img {
-      width: 300px;
+      width: 240px;
       max-width: 564px;
       height: auto;
 
